<resources>
    <string name="app_name">AndroidCurso</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hola_bienvenido">Hola, Bienvenido</string>
    <string name="todo">TODO</string>
    <string name="button">Button</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="man">Hombre</string>
    <string name="woman">Mujer</string>
    <string name="entrar_btn">Entrar</string>
    <string name="asistencia">Asistencia</string>
    <string name="asistencia_app">App</string>
    <string name="employer_num">Número de empleado</string>
    <string name="eight_digits">8 digitos</string>
    <string name="eigth_caracteres">8 caracteres</string>
    <string name="start">Entrada</string>
    <string name="btn_exit">salida</string>
    <string name="meeting_point">Estoy en el punto de encuentro</string>
    <string name="finalizar">Finalizar</string>
    <string name="employee_report">Reporte</string>
    <string name="employee_list">Lista de empleados</string>
    <string name="menu_mas">Más</string>
    <string name="info_employee">Hola:</string>
    <string name="date_info">Fecha:</string>
    <string name="employee_start">Activos</string>
    <string name="employee_inactivos">Inactivos</string>
    <string name="lista_empleados">Lista de empleados</string>
    <string name="reporte_empleados">Reporte de empleados</string>
    <string name="password_hint">Contraseña</string>
    <string name="text_report_colab">¿Se encuentra en el punto de encuentro?</string>
    <string name="text_splas_titulo">AsistenciApp</string>
    <string name="text_subt_splash">Campus Digital</string>
    <string name="text_collection_collaborator_number">No. de colaborador:</string>
    <string name="text_collection_cambiar_status">Estado:</string>
    <string name="enter_employee">Ingresa tu # de Empleado correctamente.</string>
    <string name="enter_password">Ingresa tu contraseña correctamente.</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="terminos_y_condiciones">Terminos y condiciones</string>
    <string name="terminos_condiciones">Su usuario y contraseña personal en informatica equivalen a su firma y se utiliza para autenticarte ante la aplicacion AsistenciApp. \n\nEl registro de asistencia solo es para el conteo del personal en el edificio, no se toma en cuenta para las horas trabajadas.</string>
    <string name="aceptar">Aceptar</string>
    <string name="texto_cierre_Sesion">¿Estás seguro de que deseas cerrar la sesión?</string>
    <string name="texto_punto_encuentro">¿Te encuentras en el punto de encuentro?</string>
    <string name="texto_cambio_status">¿Deseas cambiar el status del colaborador?</string>
    <string name="cancelar">Cancelar</string>
    <string name="pausa">Pausa</string>
    <string name="vuelta">Vuelta</string>
    <string name="nombre">Nombre:</string>
    <string name="confirmar"> Si </string>
    <string name="cancelarr"> No </string>

</resources>