<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/DialogSituacion"
    android:layout_width="320sp"
    android:layout_height="wrap_content"
    android:background="@drawable/background_dialog"
    android:theme="@style/AppMaterialTheme">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageClosed"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        app:srcCompat="@drawable/close"
        android:tint="@color/azul_app_asistencia"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/imageClosed"
        android:layout_marginStart="30dp"
        android:layout_marginTop="115dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/robotobold"
        android:gravity="center"
        android:text="@string/texto_cierre_Sesion"
        android:textColor="@color/colorTextCoppelNegro"
        android:textSize="18sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/textView2"
        android:layout_marginTop="2dp"
        android:paddingTop="50dp"
        android:paddingBottom="25dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelButton"
            style="@style/AppMaterialTheme.Button.Outlined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/cancelar"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/acceptButton"
            style="@style/AppMaterialTheme.Button.Outlined.Blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:text="@string/aceptar"
            android:textAllCaps="false" />
    </LinearLayout>
</RelativeLayout>