<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gris_claro"
    tools:context=".asistenciaapp.HomeActivity">

    <RelativeLayout
        android:id="@+id/toolbarHomePage"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/azul_app_asistencia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_centerVertical="true"
            android:text="AsistenciApp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageButtonMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/menu"
            android:onClick="showPopupMenu"/>

    </RelativeLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_info_empleado"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="35dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarHomePage">

        <View
            android:layout_width="8dp"
            android:layout_height="wrap_content"
            android:background="@color/complementario_azul_ligero" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/robotobold"
                    android:text="@string/info_employee"
                    android:textColor="@color/colorTextCoppelNegro"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/nombreEmpleado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/robotobold"
                    android:gravity="end"
                    android:textColor="@color/name_empleado"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    tools:text="Alma Judith Estrada Garcia" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="2dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/robotlight"
                    android:text="@string/date_info"
                    android:textColor="@color/colorTextCoppelNegro"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/textDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/robotobold"
                    android:gravity="end"
                    android:textColor="@color/colorTextCoppelNegro"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="18 de septiembre de 2023" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/start"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/color_btn_activo"
        app:cardCornerRadius="16dp"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:focusable="true"
        app:layout_constraintEnd_toStartOf="@id/pause"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_info_empleado">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/pause"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/color_btn_inactivo"
        app:cardCornerRadius="16dp"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/start"
        app:layout_constraintTop_toBottomOf="@id/card_info_empleado">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/pausa"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/returnn"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/color_btn_activo"
        app:cardCornerRadius="16dp"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:focusable="true"
        app:layout_constraintEnd_toStartOf="@id/exit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/vuelta"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold">
        </TextView>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/exit"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/color_btn_inactivo"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/returnn"
        app:layout_constraintTop_toBottomOf="@id/pause"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:focusable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_exit"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold">
        </TextView>

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/viewBottomDegradado"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/show_elevation_effect"
        app:layout_constraintBottom_toTopOf="@+id/frameLayoutBottomWorkedDays"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayoutBottomWorkedDays"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="165dp"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/meetingPoint"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="18dp"
            android:background="@drawable/background_button"
            android:fontFamily="@font/circular_std"
            android:text="@string/meeting_point"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:clickable="true"
            android:focusable="true"/>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>